x86 mm: ignore memory regions > 4G

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,7 +41,7 @@
         {
             "label": "start_os",
             "type": "shell",
-            "command": "tmux new -s mos_kernel_debug -d qemu-system-i386 -m 3355M -kernel ${workspaceFolder}/build/mos_multiboot.bin -s -S -serial stdio -append 'hello, world'",
+            "command": "tmux new -s mos_kernel_debug -d qemu-system-i386 -m 4G -kernel ${workspaceFolder}/build/mos_multiboot.bin -s -S -serial stdio -append 'hello, world'",
             "problemMatcher": [],
             "group": "none",
             "dependsOn": [
