x86 cpu: support reading # of cpu

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -34,6 +34,8 @@
                 "qemu-system-i386",
                 "-m",
                 "2G",
+                "-smp",
+                "8",
                 "-kernel",
                 "${workspaceFolder}/build/mos_multiboot.bin",
                 "-s",
