--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,3 +18,4 @@ endmacro()
 mos_add_test(printf "printf family")
 mos_add_test(linked_list "linked list")
 mos_add_test(kmalloc "kmalloc stress test")
+mos_add_test(cmdline_parser "cmdline parser test")
