lib: add hashmap

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,8 @@ add_library(mos_kernel.elf STATIC
     kernel/panic.c
     kernel/printk.c
     kernel/stack_protector.c
+    lib/hashmap.c
+    lib/hashmap_common.c
     lib/linked_list.c
     lib/stdio.c
     lib/stdio_impl.c
