--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,3 +19,4 @@ mos_add_test(printf "printf family")
 mos_add_test(linked_list "linked list")
 mos_add_test(kmalloc "kmalloc stress test")
 mos_add_test(cmdline_parser "cmdline parser test")
+mos_add_test(hashmap "hashmap test")
