ci: include the kernel binary if tests failed

--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -59,6 +59,7 @@ jobs:
         id: run_tests
         run: |
           cd ${{github.workspace}}/build
+          cp ${{steps.get_bootable.outputs.bootable}} test-failure.bin
           ${{github.workspace}}/tests/run_tests.sh
 
       - name: Upload Test Result
