lib: add a downwards-growing stack

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,3 +20,4 @@ mos_add_test(linked_list "linked list")
 mos_add_test(kmalloc "kmalloc stress test")
 mos_add_test(cmdline_parser "cmdline parser test")
 mos_add_test(hashmap "hashmap test")
+mos_add_test(downwards_stack "downwards stack test")
