kernel: enter the usermode

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -38,7 +38,7 @@
                 "-m",
                 "2G",
                 "-smp",
-                "8",
+                "4",
                 "-kernel",
                 "${workspaceFolder}/build/mos_multiboot.bin",
                 "-s",
@@ -48,7 +48,7 @@
                 "-serial",
                 "chardev:serial_log",
                 "-append",
-                "console=ttyS0,115200n8 init=/init debug mos_tests mos_tests_skip_prefix=kmalloc_ mos_tests_halt_on_success",
+                "console=ttyS0,115200n8 init=/init debug mos_tests_skip_prefix=kmalloc_",
             ],
             "problemMatcher": [],
             "group": "none",
