--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,3 +22,4 @@ mos_add_test(cmdline_parser "cmdline parser test")
 mos_add_test(hashmap "hashmap test")
 mos_add_test(downwards_stack "downwards stack test")
 mos_add_test(fs_api "test fs api")
+mos_add_test(memops "test memery operations")
