--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,9 +65,9 @@ add_library(mos_kernel.elf STATIC
     kernel/device/block.c
     kernel/elf/elf.c
     kernel/filesystem/cpio/cpio.c
-    kernel/filesystem/file.c
+    kernel/filesystem/filesystem.c
     kernel/filesystem/mount.c
-    kernel/filesystem/path.c
+    kernel/filesystem/pathutils.c
     kernel/interrupt.c
     kernel/init/main.c
     kernel/kernel_init.c
