kernel: small code refactor

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,6 +41,8 @@
                 "${workspaceFolder}/build/mos_multiboot.bin",
                 "-s",
                 "-S",
+                "-smp",
+                "4",
                 "-chardev",
                 "stdio,id=serial_log,logfile=serial_log.log,signal=off",
                 "-serial",
