--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ add_library(mos_kernel.elf STATIC
     kernel/filesystem/pathutils.c
     kernel/interrupt.c
     kernel/init/main.c
+    kernel/io/io.c
     kernel/kernel_init.c
     kernel/mm/liballoc.c
     kernel/mm/paging.c
