--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -32,6 +32,8 @@ jobs:
         run: |
           cmake \
             -DCMAKE_BUILD_TYPE=${{matrix.build_type}} \
+            -DMOS_MM_LIBALLOC_DEBUG=${{matrix.run_tests}} \
+            -DMOS_ENABLE_DEBUG_LOG=${{matrix.run_tests}} \
             -B ${{github.workspace}}/build \
             -G Ninja
 
