kernel: load & run /init from initrd

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,14 +41,12 @@
                 "${workspaceFolder}/build/mos_multiboot.bin",
                 "-s",
                 "-S",
-                "-smp",
-                "4",
                 "-chardev",
                 "stdio,id=serial_log,logfile=serial_log.log,signal=off",
                 "-serial",
                 "chardev:serial_log",
                 "-append",
-                "init=/init  mos_tests",
+                "init=/init",
                 "-initrd",
                 "/home/moody/Projects/MOS/build/initrd.cpio"
             ],
