syscall: basic structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ add_library(mos_kernel.elf STATIC
     kernel/filesystem/filesystem.c
     kernel/filesystem/mount.c
     kernel/filesystem/pathutils.c
-    kernel/interrupt.c
+    kernel/ksyscall.c
     kernel/io/io.c
     kernel/kernel_init.c
     kernel/mm/liballoc.c
