WIP scheduler, refactored paging & context-switching

--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -33,7 +33,7 @@ jobs:
           cmake \
             -DCMAKE_BUILD_TYPE=${{matrix.build_type}} \
             -DMOS_MM_LIBALLOC_DEBUG=${{matrix.run_tests}} \
-            -DMOS_ENABLE_DEBUG_LOG=${{matrix.run_tests}} \
+            -DMOS_DEBUG=${{matrix.run_tests}} \
             -B ${{github.workspace}}/build \
             -G Ninja
 
