--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ include_directories(
 )
 
 add_library(mos_kernel.elf STATIC
+    kernel/boot/startup.c
     kernel/cmdline.c
     kernel/device/console.c
     kernel/device/block.c
