--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -38,6 +38,8 @@
                 "qemu-system-i386",
                 "-m",
                 "4G",
+                "-display",
+                "gtk,show-tabs=on",
                 "-kernel",
                 "${workspaceFolder}/build/mos_multiboot.bin",
                 "-s",
@@ -47,7 +49,7 @@
                 "-serial",
                 "chardev:serial_log",
                 "-append",
-                "init=/bin/init",
+                "init=/bin/init mos_tests",
                 "-initrd",
                 "/home/moody/Projects/MOS/build/initrd.cpio"
             ],
