--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -28,11 +28,12 @@ jobs:
           sudo apt update
           sudo apt -y install nasm grub2-common mtools jq ninja-build qemu-system-x86 cpio libgmp-dev libmpfr-dev libmpc-dev
 
-      - name: Build Cross Compiler
+      - name: Download & Extract Cross Compiler
         run: |
-          cd $GITHUB_WORKSPACE/scripts
-          ./i686-elf-build.sh
-          echo "PATH=$PATH:$GITHUB_WORKSPACE/scripts/toolchains/i686-elf/bin" >> $GITHUB_ENV
+          wget -q "https://github.com/moodyhunter/i686-elf-prebuilt/releases/download/artifact/toolchain-i686-elf.tar.gz"
+          tar -xzf toolchain-i686-elf.tar.gz
+          mv toolchain /tmp/
+          echo "PATH=$PATH:/tmp/toolchain/bin" >> $GITHUB_ENV
 
       - name: Configure CMake
         run: |
