--- a/.github/workflows/code-browser.yml
+++ b/.github/workflows/code-browser.yml
@@ -2,7 +2,7 @@ name: Generate MOS CodeBrowser
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
@@ -18,6 +18,7 @@ jobs:
 
       - name: Configure CMake
         run: |
+          sed -i 's/-elf-g/-linux-gnu-g/g' cmake/toolchains/mos_target_setup.cmake
           cmake \
             -DCMAKE_BUILD_TYPE=Debug \
             -DMOS_KERNEL_RUN_TESTS=ON \
