--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
-
-include(cmake/toolchains/mos_target_setup.cmake)
-mos_target_setup(x86 i686 32)
+include(mos_config.cmake)
+include(cmake/mos_target_setup.cmake)
+mos_target_setup(${MOS_ISA_FAMILY} ${MOS_ISA} ${MOS_BITS})
 
 cmake_minimum_required(VERSION 3.22)
 
@@ -11,44 +11,24 @@ endif()
 
 project(MOS LANGUAGES CXX C ASM_NASM VERSION 0.1)
 set(CMAKE_C_STANDARD 11)
-set(CMAKE_C_STANDARD_REQUIRED TRUE)
 set(CMAKE_C_EXTENSIONS ON)
+set(CMAKE_C_STANDARD_REQUIRED TRUE)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wpedantic -pedantic -fstack-protector-strong")
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_EXTENSIONS ON)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
-set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -pedantic -fstack-protector-strong")
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
-
-option(MOS_MM_LIBALLOC_LOCKS "liballoc: has lock support" OFF)
-option(MOS_MM_LIBALLOC_DEBUG "liballoc: debug message enabled" OFF)
-option(MOS_DEBUG "Enable debug log" OFF)
-option(MOS_PRINTK_HAS_FILENAME "printk: has filename" ON)
-
-if(EXISTS ${CMAKE_SOURCE_DIR}/config.cmake)
-    message(STATUS "Found custom configuration file 'config.cmake'")
-    include(${CMAKE_SOURCE_DIR}/config.cmake)
-endif()
-
-if(NOT DEFINED MOS_MAX_CPU_COUNT)
-    set(MOS_MAX_CPU_COUNT 16) # Also modify the linker script
-endif()
-
-if(NOT DEFINED MOS_PROCESS_MAX_OPEN_FILES)
-    set(MOS_PROCESS_MAX_OPEN_FILES 256)
-endif()
-
-set(MOS_ARCH_CONFIG ${CMAKE_SOURCE_DIR}/arch/${MOS_TARGET_ARCH}/mos_platform.cmake)
+set(MOS_ARCH_CONFIG ${CMAKE_SOURCE_DIR}/arch/${MOS_ISA_FAMILY}/mos_platform.cmake)
 
 if (NOT EXISTS ${MOS_ARCH_CONFIG})
-    message(FATAL_ERROR "No configuration file for architecture '${MOS_TARGET_ARCH}'")
+    message(FATAL_ERROR "No configuration file for architecture '${MOS_ISA_FAMILY}'")
 endif()
 
-include(CTest)
 include(generate_kconfig)
 include(configure_summary)
 include(generate_syscall_headers)
@@ -61,8 +41,6 @@ execute_process(
     OUTPUT_STRIP_TRAILING_WHITESPACE
     ERROR_STRIP_TRAILING_WHITESPACE
 )
-
-option(MOS_MEME "Enable MEME" OFF)
 
 mos_add_kconfig_define(MOS_MM_LIBALLOC_LOCKS)
 mos_add_kconfig_define(MOS_MM_LIBALLOC_DEBUG)
@@ -118,7 +96,7 @@ mos_add_summary_section(KERNEL "MOS Kernel")
 mos_add_summary_item(KERNEL "Version" "${MOS_KERNEL_VERSION_STRING}")
 mos_add_summary_item(KERNEL "Revision" "${MOS_KERNEL_REVISION_STRING}")
 mos_add_summary_item(KERNEL "Builtin Cmdline" "${MOS_KERNEL_BUILTIN_CMDLINE_STRING}")
-mos_add_summary_item(KERNEL "Architecture" "${MOS_TARGET_ARCH}")
+mos_add_summary_item(KERNEL "Architecture" "${MOS_ISA_FAMILY} (${MOS_ISA}, ${MOS_BITS}-bit)")
 
 mos_add_summary_section(MM "MOS Memory Management")
 mos_add_summary_item(MM "liballoc: locks" "${MOS_MM_LIBALLOC_LOCKS}")
