--- a/userspace/CMakeLists.txt
+++ b/userspace/CMakeLists.txt
@@ -2,9 +2,9 @@
 
 mos_add_summary_section(USERSPACE "Userspace Programs")
 
-add_library(mos_userspace_lib INTERFACE)
-add_library(mos::userspace ALIAS mos_userspace_lib)
-target_include_directories(mos_userspace_lib
+add_library(mos_libuserspace INTERFACE)
+add_library(mos::libuserspace ALIAS mos_libuserspace)
+target_include_directories(mos_libuserspace
     INTERFACE
         ${CMAKE_SOURCE_DIR}/include
         ${CMAKE_BINARY_DIR}/include
@@ -12,10 +12,12 @@ target_include_directories(mos_userspace_lib
 )
 
 # build userspace programs after the kernel
-add_dependencies(mos_userspace_lib mos::elf_kernel)
+add_dependencies(mos_libuserspace mos::elf_kernel)
 
 # create a gdbinit file for debugging
 write_file(${CMAKE_BINARY_DIR}/gdbinit "# GDB init file for MOS")
+
+add_custom_target(mos_userspace_programs)
 
 macro(add_userspace_program NAME)
     set(OPTIONS "")
@@ -26,12 +28,66 @@ macro(add_userspace_program NAME)
         message(FATAL_ERROR "Unknown argument(s): ${ARG_UNPARSED_ARGUEMENTS}")
     endif()
 
-    add_executable(${NAME} ${ARG_SOURCES})
-    set_target_properties(${NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${ARG_INSTALL_PREFIX}")
-    target_link_libraries(${NAME} PUBLIC mos::userspace)
-    mos_add_summary_item(USERSPACE ${NAME} ${ARG_INSTALL_PREFIX}/${NAME})
+    add_executable(${NAME} EXCLUDE_FROM_ALL ${ARG_SOURCES})
+
+    get_target_property(BINARY_OUTPUT_DIR ${NAME} RUNTIME_OUTPUT_DIRECTORY)
+
+    if(ARG_INSTALL_PREFIX)
+        set(OUTPUT_DIR "${CMAKE_BINARY_DIR}/${ARG_INSTALL_PREFIX}")
+    else()
+        set(OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}")
+    endif()
+
+    set_target_properties(${NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${OUTPUT_DIR}")
+    target_link_libraries(${NAME} PUBLIC mos::libuserspace)
+    mos_add_summary_item(USERSPACE ${NAME} ${OUTPUT_DIR}/${NAME})
     write_file(${CMAKE_BINARY_DIR}/gdbinit "" APPEND)
-    write_file(${CMAKE_BINARY_DIR}/gdbinit "add-symbol-file ${CMAKE_BINARY_DIR}/${ARG_INSTALL_PREFIX}/${NAME}" APPEND)
+    write_file(${CMAKE_BINARY_DIR}/gdbinit "add-symbol-file ${OUTPUT_DIR}/${NAME}" APPEND)
+    add_dependencies(mos_userspace_programs ${NAME})
 endmacro()
 
-add_userspace_program(init SOURCES init/main.c INSTALL_PREFIX /initrd/bin)
+add_custom_target(mos_initrd
+    find . -depth | cpio -o --format=crc >../initrd.cpio
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/initrd
+    COMMENT "Creating initrd at ${CMAKE_BINARY_DIR}/initrd.cpio"
+    BYPRODUCTS ${CMAKE_BINARY_DIR}/initrd.cpio
+)
+
+macro(add_initrd_item ITEM_TYPE SOURCE_NAME PATH)
+    set(INITRD_DIR "${CMAKE_BINARY_DIR}/initrd")
+    set(OUTPUT_DIR "${INITRD_DIR}${PATH}")
+
+    message(STATUS "Adding ${ITEM_TYPE} ${SOURCE_NAME} to initrd at ${PATH}")
+
+    if("${ITEM_TYPE}" STREQUAL "TARGET")
+        add_dependencies(mos_initrd ${SOURCE_NAME})
+        add_custom_command(TARGET ${SOURCE_NAME} POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E make_directory ${OUTPUT_DIR}
+            COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${SOURCE_NAME}> ${OUTPUT_DIR}/${SOURCE_NAME}
+            COMMENT "Copying ${SOURCE_NAME} to initrd"
+            BYPRODUCTS ${OUTPUT_DIR}/${SOURCE_NAME}
+            BYPRODUCTS ${OUTPUT_DIR}
+        )
+    elseif("${ITEM_TYPE}" STREQUAL "FILE")
+        set(SOURCE_NAME ${CMAKE_CURRENT_LIST_DIR}/${SOURCE_NAME})
+        get_filename_component(FILE_NAME ${SOURCE_NAME} NAME)
+        string(REPLACE "/" "_" TARGET_NAME ${SOURCE_NAME})
+        add_custom_target(${TARGET_NAME}_initrd
+            WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
+            COMMAND ${CMAKE_COMMAND} -E make_directory ${OUTPUT_DIR}
+            COMMAND ${CMAKE_COMMAND} -E copy ${SOURCE_NAME} ${OUTPUT_DIR}
+            COMMENT "Copying ${SOURCE_NAME} to initrd"
+            DEPENDS ${SOURCE_NAME}
+            BYPRODUCTS ${OUTPUT_DIR}/${FILE_NAME}
+            BYPRODUCTS ${OUTPUT_DIR}
+        )
+        add_dependencies(mos_initrd ${TARGET_NAME}_initrd)
+    else()
+        message(FATAL_ERROR "Unknown initrd item type: ${ITEM_TYPE}")
+    endif()
+endmacro()
+
+add_userspace_program(init SOURCES init/main.c)
+
+add_initrd_item(TARGET init /programs)
+add_initrd_item(FILE assets/msg.txt /assets)
