--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -41,14 +41,10 @@ jobs:
             -DCMAKE_BUILD_TYPE=${{matrix.build_type}} \
             -DMOS_MM_LIBALLOC_DEBUG=${{matrix.run_tests}} \
             -DMOS_DEBUG=${{matrix.run_tests}} \
+            -DBUILD_TESTING=${{matrix.run_tests}} \
             -B ${{github.workspace}}/build \
             -G Ninja
-
-      - name: Get Bootable File
-        id: get_bootable
-        run: |
-          export BOOTABLE=$(jq -r .${{matrix.target}} < ${{github.workspace}}/build/bootables.json)
-          echo "BOOTABLE=$BOOTABLE" >> $GITHUB_ENV
+          echo "BOOTABLE=$(jq -r .${{matrix.target}} < ${{github.workspace}}/build/bootables.json)" >> $GITHUB_ENV
 
       - name: Build
         run: |
@@ -79,10 +75,11 @@ jobs:
           cp ${{env.BOOTABLE}} test-failure.bin
           cp initrd.cpio test-failure-initrd.cpio
           ${{github.workspace}}/scripts/run_tests.sh
+          tar -czf test-failure.tar.gz test-failure.*
 
       - name: Upload Test Result
         if: matrix.run_tests == 'ON' && failure() && steps.run_tests.outcome == 'failure'
         uses: actions/upload-artifact@v3
         with:
           name: MOS-${{matrix.target}}-${{matrix.build_type}}-failures.zip
-          path: ${{github.workspace}}/build/test-failure.*
+          path: ${{github.workspace}}/build/test-failure.tar.gz
